--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <title>Marvel Heroes</title>
   </head>
-  <body>
+  <body data-theme="light">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
